EDU-401 Fix selected tabs wrapping

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -32,6 +32,7 @@
 
 .SearchPage-selectedTags {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   padding-top: @edu-content-padding;
   padding-bottom: 2 * @edu-content-padding;
