--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -8,12 +8,9 @@
   border-radius: 22px;
   background-color: @grey-3;
   font-size: 12px;
-  margin: 0 5px;
+  margin: 3px 5px 3px 0;
   border: none;
 
-  &:first-of-type {
-    margin-left: 0;
-  }
   &:last-of-type {
     margin-right: 0;
   }
